<resources>
    <string name="app_name">TCC</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="accountAccess">Access Account</string>
    <string name="email">Email</string>
    <string name="type">Enter...</string>
    <string name="sampleEmail">sample@email.com</string>
    <string name="password">Password</string>
    <string name="samplePassword">******</string>
    <string name="signIn">Sign In</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="findYourBrand">Find Your Brand...</string>
    <string name="CurrentLocation">Current Location</string>
    <string name="all">All</string>
    <string name="popularBrands">Popular Brands</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="pizzaHut">Pizza Hut</string>
    <string name="moreInfo">More Info</string>
    <string name="desc">Plants are multicellular organisms in the kingdom Plantae that use photosynthesis to make their own food. There are over 300,000 species of plants; common examples of plants include grasses, trees, and shrubs.</string>
    <string name="CouponsAvailable">Coupons Available</string>
    <string name="Branches">Branches</string>
    <string name="couponsuccess">Coupon Redeem Successfully</string>
    <string name="couponsuccessDesc">Your Pizza Hut Coupon Redeem Successfully</string>
    <string name="BuyOffer">Buy Offer</string>
    <string name="BuyOfferDesc">Treat yourself to the best pizza, sides and desserts from your nearest Pizza Hut. Treat is due? Treat your friends and family to our yummy pizzas! Oven Hot Pizza. Fast Delivery. Deals For All. Order Online.</string>
    <string name="checkout">Checkout</string>
    <string name="firstname">FirstName</string>
    <string name="ZeeshanSami">Zeeshan Sami</string>
    <string name="emailAddress">Email Address</string>
    <string name="emailValue">devtest@gmail.com</string>
    <string name="pwdVallue">dtest@1234</string>
    <string name="phoneNumber">Phone</string>
    <string name="number">923412030258</string>
    <string name="Country">Country</string>
    <string name="Countryhint">Pakistan</string>
    <string name="MyCoupons">My Coupons</string>
    <string name="changePwd">Change Password</string>
    <string name="myProfile">My Profile</string>
    <string name="referAFriend">Refer A Friend</string>
    <string name="couponRedeemption">Coupons Redemption</string>
    <string name="logout">Logout</string>
    <string name="currentPassword">Current Password</string>
    <string name="newPwd">New Password</string>
    <string name="newConfirmPwd">Confirm New Password</string>
    <string name="update">Update Password</string>
    <string name="Sami">Sami</string>
    <string name="Zeeshan">Xeeshan Sami</string>
    <string name="lastName">Last Name</string>
    <string name="userid">User0921#1</string>
    <string name="userId">kanas9192@gmail.com</string>
    <string name="userPwd">ibmdellsony</string>
    <string name="somethingWentWrong">Something went wrong, please try again later.</string>
    <string name="facebook_app_id">527900741771513</string>
    <string name="fb_login_protocol_scheme">fb527900741771513</string>
    <string name="phoneNumberHint">03412030258</string>
    <string name="promo">Promo*</string>
    <string name="gender">Gender</string>
    <string name="regisration">Registration</string>
    <string name="title_activity_maps">Map</string>
    <string name="code">XH19OP</string>
    <string name="no_record_found">No brands found</string>
    <string name="no_nearest_brands_found">No neatest brand found</string>
    <string name="no_category_found">No category found</string>
    <string name="nearestBrands">Neatest Brands</string>
    <string name="categories">Categories</string>
    <string name="search_address">Search places...</string>
    <string name="google_places_key">AIzaSyA17O4pkxre0tLA4JNMRwyw7gAWxi2Q1Zs</string>
    <string name="imhere">Your location</string>
    <string name="GetStarted">Get Started</string>
    <string name="welcome">Welcome</string>
    <string name="facebook">facebook</string>
    <string name="google">Google</string>
    <string name="discovry">Discovery</string>
    <string name="strains">Strains</string>
    <string name="product">Product</string>
    <string name="Locations">Locations</string>
    <string name="Videos">Videos</string>
    <string name="Blog">Blog</string>
    <string name="Diagnose">Diagnostics</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="settings">Setting</string>
    <string name="request_form">Request Form</string>
    <string name="fullName">Full Name</string>
    <string name="updateProfile">Update Profile</string>
    <string name="change_photo">Change Photo</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="_82Humidity">82\nHumidity</string>
    <string name="_42Diameter">42\nDiameter</string>
    <string name="_24Days">24\Days</string>
    <string name="black_russain">Black-Russain</string>
    <string name="_36">3$6</string>
    <string name="_18">$18</string>
    <string name="all_you_need_to_know">All you need to know...</string>
    <string name="indoor_plant">indoor plant</string>
    <string name="grwoth_information">Grwoth Information</string>
    <string name="grow_difficulty">Grow Difficulty</string>
    <string name="medium">MEDIUM</string>
    <string name="flowring_type">FLOWRING TYPE</string>
    <string name="photo_period">PHOTO PERIOD</string>
    <string name="shorts">SHORT</string>
    <string name="end_of_sep_oct">END OF SEP/OCT</string>
    <string name="harvest_time">HARVEST TIME</string>
    <string name="_7_8_weeks">7 - 8 WEEKS</string>
    <string name="flowring_time">FLOWRING TIME</string>
    <string name="effectiveness">Effectiveness</string>
    <string name="submit">SUBMIT</string>
    <string name="forgetPwd">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="enter">034102030258</string>
    <string name="ForYou">For you</string>
    <string name="Training">Training</string>
    <string name="newVideos">New Videos</string>
    <string name="viewAll">ViewAll</string>
    <string name="myCart">My Cart</string>
    <string name="promotion_or_discount">Promotion or Discount</string>
    <string name="add_discount_promotion_code">Add Discount/Promotion Code</string>
    <string name="price_summary">Price Summary</string>
    <string name="discount">Discount</string>
    <string name="_130">0</string>
    <string name="include_text_and_tax_codes">Include text and tax codes</string>
    <string name="total_item_price">Total Item Price</string>
    <string name="_10">0</string>
    <string name="tax">Tax</string>
    <string name="_5">$0</string>
    <string name="sub_total">Sub Total</string>
    <string name="_125">0</string>
    <string name="my_orders">My Orders</string>
    <string name="genuine_products_15_days_return_100_secure">Genuine Products 15 days return, 100% secure</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="notifications">Notifications</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="my_payments_methods">My Payments Methods</string>
    <string name="my_addresses">My Addresses</string>
    <string name="change_password">Change Password</string>
    <string name="languages">Languages</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_desc">The privacy policy is one of the most essential legal requirements for websites.  Even if you just have a small business or a blog with no income at all, you might be surprised to discover that you still need a privacy policy.  Basically, if your website collects personal data, you need a privacy policy that informs your users about this according to privacy laws in most jurisdictions, including the EU and the US.  Almost all modern websites function with the use of cookies, so chances are high that your website is collecting personal data, for example for statistical, functional or marketing purposes.  In this blogpost, we take a look at what constitutes a good privacy policy, how to make a compliant GDPR privacy policy and whether using a privacy policy generator is a good idea.  Learn what the privacy policy is and how to get one for your website below.</string>
    <string name="help_desc">Working on a new theme for WordPress? Need to create an example site for a client? Whatever the reason, using dummy content can help display what a site might actually look like once it goes live. Instead of creating your own posts and pages, it’s easier to simply use some form of WordPress dummy content generator.  Luckily, someone already developed such a method and it’s free to use. With a couple clicks of the mouse, you can show a WordPress theme with sample data ready.  In this tutorial, I’m going to show you the easiest and quickest way to display WordPress example content in your theme.</string>
    <string name="selectLangauge">Select Langauge</string>
    <string name="spanish">Spanish</string>
    <string name="french">French</string>
    <string name="english">English</string>
    <string name="EnterOldPwd">Old Password</string>
    <string name="EnterNewPwd">New Password</string>
    <string name="EnterConfirmNewPwd">Confirm New Password</string>
    <string name="addAnotherAddresses">Add Another Addresses</string>
    <string name="add_new_payment_method">Add New Another Payment Method</string>
    <string name="strain_form">Strain Request Form</string>
    <string name="address1">Address line 1</string>
    <string name="address2">Address line 2</string>
    <string name="city">City</string>
    <string name="StateResign">State/Region/Provice</string>
    <string name="PostalCode">Postal Code</string>
    <string name="_2_5">2-5</string>
    <string name="_6_11">6-11</string>
    <string name="_12_23">12-23</string>
    <string name="_24_49">24-49</string>
    <string name="_50_99">50-99</string>
    <string name="_100">100+</string>
    <string name="i_m_interested_in_plants">I\'m Interested in Plants</string>
    <string name="i_m_interested_in_seeds">I\'m Interested in Seeds</string>
    <string name="nutreints">Nutreints</string>
    <string name="grow_tents">Grow tents</string>
    <string name="grow_lights">Grow lights</string>
    <string name="grow_mentorship">Grow Mentorship</string>
    <string name="i_m_interested_in_other_products">I\'m Interested in Other Products</string>
    <string name="how_did_you_find_us">How did you find us?</string>
    <string name="searchLocation">Search Location</string>
    <string name="outside">Outside</string>
    <string name="inside">Inside</string>
</resources>