<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splashbg"
    tools:context=".controllers.launcher">
    <TextView
        android:id="@+id/skipBtn"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_70sdp"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"></TextView>

    <TextView
        android:id="@+id/headerLbl"
        android:textColor="@color/white"
        android:textSize="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skipBtn"></TextView>
    <TextView
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:text="@string/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerLbl"
        ></TextView>
    <Button
        android:id="@+id/btnGetStarted"
        android:background="@drawable/bg_border"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:text="@string/GetStarted"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_50sdp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_50sdp"
        ></Button>

</androidx.constraintlayout.widget.ConstraintLayout>